--- a/.gitignore
+++ b/.gitignore
@@ -153,3 +153,9 @@ $RECYCLE.BIN/
 
 
 # End of https://www.gitignore.io/api/linux,macos,windows,node,visualstudiocode
+
+### Custom ###
+videos/
+!videos/.gitkeep
+reports/
+!reports/.gitkeep
