--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
-    "husky": "^1.0.0-rc.15"
+    "husky": "^1.0.0-rc.15",
+    "nightwatch": "^0.9.21"
   },
   "husky": {
     "hooks": {
@@ -29,6 +30,10 @@
     }
   },
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "postinstall": "docker pull elgalu/selenium && docker pull dosel/zalenium",
+    "zalenium:start": "npm run zalenium:stop; docker run --rm -ti -d --name zalenium -p 4444:4444 -v /var/run/docker.sock:/var/run/docker.sock -v ${PWD}/videos:/home/seluser/videos --privileged dosel/zalenium start",
+    "zalenium:stop": "docker stop zalenium || true",
+    "test": "nightwatch"
   }
 }
